css/style.css
* {
    margin: 0;
    padding: 0;
}

html {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 16px;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    scroll-behavior: smooth;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1f2937;
    color: #e5e7eb;
    font-size: 1rem;
    padding: 1rem 5rem;
}

footer a .fa-github {
    font-size: 2rem;
}

footer a {
    color: #e5e7eb;
}

header {
    display: flex;
    justify-content: center;
    align-content: center;
    text-align: center;
    padding: 4rem ;
    background-color: #e5e7eb;
}

#rps-button-container {
    display: flex;
    justify-content: space-between;
}

.playerChoice.btn {
    min-width: 8rem;
    padding: 4rem;
    margin: 2rem 1rem;
    flex: 1;
}

.promptingText {
    height: 1rem;
    margin: 2rem;
}

#scoreBoard {
    border: 1px solid black;
    padding: 1rem;
    display: flex;
}

.playerScoreBoard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1rem;
    min-width: 8rem;
    /* flex: 1 1 auto; */
}


#scoreBoard div .label {
    /* margin-bottom: 1rem 1rem; */
    text-align: center;
}

.score {
    font-size: 5rem;
}

